// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recommend Color Black on black recommendation 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  >
    <span>
      Element has insufficient color contrast of 1 (foreground color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#000000",
        }
      }
    />
    <span>
      #000000, background color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#000000",
        }
      }
    />
    <span>
      #000000, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1.
    </span>
  </span>
  <span
    className="screenReaderOnly"
  >
    Element has insufficient color contrast of 1 (foreground color: #000000, background color: #000000, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1.
  </span>
</React.Fragment>
`;

exports[`Recommend Color Large Font Recommendation 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  >
    <span>
      Element has insufficient color contrast of 2.52 (foreground color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#8a94a8",
        }
      }
    />
    <span>
      #8a94a8, background color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#e7ecd8",
        }
      }
    />
    <span>
      #e7ecd8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 3:1. Use foreground color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#7c8597",
        }
      }
    />
    <span>
      #7c8597 (with original background color ratio is: 3.07) to meet expected contrast ratio. Use background color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#feffed",
        }
      }
    />
    <span>
      #feffed (with original foreground color ratio is: 3.01) to meet expected contrast ratio.
    </span>
  </span>
  <span
    className="screenReaderOnly"
  >
    Element has insufficient color contrast of 2.52 (foreground color: #8a94a8, background color: #e7ecd8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 3:1. Use foreground color: #7c8597 (with original background color ratio is: 3.07) to meet expected contrast ratio. Use background color: #feffed (with original foreground color ratio is: 3.01) to meet expected contrast ratio.
  </span>
</React.Fragment>
`;

exports[`Recommend Color Normal Font Recommendation 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  >
    <span>
      Element has insufficient color contrast of 2.52 (foreground color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#8a94a8",
        }
      }
    />
    <span>
      #8a94a8, background color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#e7ecd8",
        }
      }
    />
    <span>
      #e7ecd8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1. Use foreground color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#5e6572",
        }
      }
    />
    <span>
      #5e6572 (with original background color ratio is: 4.86) to meet expected contrast ratio. Use background color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#ffffff",
        }
      }
    />
    <span>
      #ffffff (with original foreground color ratio is: 3.05) to meet expected contrast ratio.
    </span>
  </span>
  <span
    className="screenReaderOnly"
  >
    Element has insufficient color contrast of 2.52 (foreground color: #8a94a8, background color: #e7ecd8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1. Use foreground color: #5e6572 (with original background color ratio is: 4.86) to meet expected contrast ratio. Use background color: #ffffff (with original foreground color ratio is: 3.05) to meet expected contrast ratio.
  </span>
</React.Fragment>
`;

exports[`Recommend Color Same Color recommendation 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  >
    <span>
      Element has insufficient color contrast of 1 (foreground color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#8a94a8",
        }
      }
    />
    <span>
      #8a94a8, background color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#8a94a8",
        }
      }
    />
    <span>
      #8a94a8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1. Use foreground color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#ffffff",
        }
      }
    />
    <span>
      #ffffff (with original background color ratio is: 3.05) to meet expected contrast ratio. Use background color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#292d33",
        }
      }
    />
    <span>
      #292d33 (with original foreground color ratio is: 4.54) to meet expected contrast ratio.
    </span>
  </span>
  <span
    className="screenReaderOnly"
  >
    Element has insufficient color contrast of 1 (foreground color: #8a94a8, background color: #8a94a8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1. Use foreground color: #ffffff (with original background color ratio is: 3.05) to meet expected contrast ratio. Use background color: #292d33 (with original foreground color ratio is: 4.54) to meet expected contrast ratio.
  </span>
</React.Fragment>
`;

exports[`Recommend Color White on White recommendation 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  >
    <span>
      Element has insufficient color contrast of 1 (foreground color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#ffffff",
        }
      }
    />
    <span>
      #ffffff, background color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#ffffff",
        }
      }
    />
    <span>
      #ffffff, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1. Use foreground color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#ffffff",
        }
      }
    />
    <span>
      #ffffff (with original background color ratio is: 1.00) to meet expected contrast ratio. Use background color: 
    </span>
    <span
      className="fixInstructionColorBox"
      style={
        Object {
          "backgroundColor": "#717171",
        }
      }
    />
    <span>
      #717171 (with original foreground color ratio is: 4.88) to meet expected contrast ratio.
    </span>
  </span>
  <span
    className="screenReaderOnly"
  >
    Element has insufficient color contrast of 1 (foreground color: #ffffff, background color: #ffffff, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1. Use foreground color: #ffffff (with original background color ratio is: 1.00) to meet expected contrast ratio. Use background color: #717171 (with original foreground color ratio is: 4.88) to meet expected contrast ratio.
  </span>
</React.Fragment>
`;
